renaming partnerSystem to bookingSystem
